--- a/SQL_Murder_Mystery_Project.ipynb
+++ b/SQL_Murder_Mystery_Project.ipynb
@@ -20,7 +20,7 @@
         "## **SQL Murder Mystery**\n",
         "Project author: Alyssa Ayala\n",
         "\n",
-        "COOP Careers SQL 104 project taken from [here](https://mystery.knightlab.com/), with GitHub reposiotry [here](https://github.com/NUKnightLab/sql-mysteries)"
+        "COOP Careers SQL 104 project taken from [here](https://mystery.knightlab.com/), with GitHub repository [here](https://github.com/NUKnightLab/sql-mysteries)"
       ],
       "metadata": {
         "id": "D0HtAb63CM6Q"
